# py-fastapi-online-cinema

./: .env.sample  .flake8  .gitignore  Dockerfile  README.MD  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose-tests.yml  pyproject.toml  pytest.ini
.github/workflows/: cd-pipeline.yml  ci-pipeline.yml
commands/: deploy.sh  run_migration.sh  run_web_server_prod.sh  setup_mailhog_auth.sh
configs/nginx/: nginx.conf
docker/mailhog/: Dockerfile
docker/nginx/: .env.sample
src/: main.py
src/config/: __init__.py  dependencies.py  settings.py
src/crud/: movie_crud.py  movie_service.py  orders.py  payments.py  shopping_cart.py  user_service.py
src/database/: __init__.py  deps.py  populate.py  session_postgresql.py  session_sqlite.py
src/database/migrations/: env.py
src/database/migrations/versions/: 18ca64d382e7_initial_migration.py  393457ae76aa_temp_migration.py  5a7b3e20f9a4_initial_migration.py  63099900c90d_temp_migration.py  7897fddd0543_temp_migration.py  9a263edd9e65_temp_migration.py  c3d355de7fc8_initial_migration.py
src/database/models/: __init__.py  accounts.py  base.py  movies.py  orders.py  payments.py  shopping_cart.py
src/database/seed_data/: carts.csv  imdb_movies.csv  orders.csv  test_data.csv  user_groups.csv
src/exceptions/: __init__.py  orders.py  shopping_cart.py
src/notifications/: __init__.py  base_notificator.py  emails.py  interfaces.py  stripe_interfaces.py  stripe_notificator.py
src/notifications/templates/: payment_success.html
src/pagination/: pages.py
src/routes/: __init__.py  accounts.py  index.py  movie_service.py  movies.py  orders.py  payments.py  profiles.py  shopping_cart.py
src/scheduler/: __init__.py  celery_config.py  tasks.py
src/schemas/: __init__.py  accounts.py  movies.py  orders.py  payments.py  payments_admin_filter.py  profiles.py  shopping_cart.py
src/schemas/examples/: movies.py
src/security/: auth.py  blacklist.py  dependencies.py  http.py  jwt_blacklist.py  token_manager.py
src/services/: payment_webhook_service.py  stripe_events.py  stripe_service.py
src/storages/: __init__.py  dropbox.py  interfaces.py  s3.py
src/templates/: index.html
src/tests/: conftest.py  test_shopping_cart.py
src/tests/doubles/fakes/: storage.py
src/tests/doubles/stubs/: emails.py
src/tests/test_auth/: test_logout.py
src/tests/test_e2e/: test_email_notification.py  test_storage.py
src/tests/test_integration/: test_accounts.py  test_logout.py  test_movies.py  test_payments.py  test_profiles.py
src/validation/: __init__.py  profile.py
